--- a/package.json
+++ b/package.json
@@ -1,19 +1,41 @@
 {
-    "name": "roon-extension-denon",
-    "version": "2025.1.2",
-    "description": "Volume Control extension to control Denon/Marantz AV receivers via network.",
-    "main": "app.js",
-    "author": "Doc Bobo <boris@pruessmann.org> (https://blog.pruessmann.org/)",
-    "license": "Apache-2.0",
-    "dependencies": {
-        "debug": "^3.1.0",
-        "denon-client": "^0.2.4",
-        "fast-xml-parser": "^4.5.1",
-        "node-fetch": "^2.1.2",
-        "node-roon-api": "github:roonlabs/node-roon-api#51258392f8bfae3fe218740dda5bc049a822872e",
-        "node-roon-api-settings": "github:roonlabs/node-roon-api-settings#67cd8ca156c5bcd01ea63833ceaaec6d6a79654d",
-        "node-roon-api-source-control": "github:roonlabs/node-roon-api-source-control#fab2ba33f2c9249a8c9e69b6dcccfc8f333ab12e",
-        "node-roon-api-status": "github:roonlabs/node-roon-api-status#504c918d6da267e03fbb4337befa71ca3d3c7526",
-        "node-roon-api-volume-control": "github:roonlabs/node-roon-api-volume-control#56315d95344c9e0dc98c07c30a2de08727437b1e"
-    }
+  "name": "roon-extension-denon",
+  "version": "2025.7.25",
+  "description": "Volume Control extension to control Denon/Marantz AV receivers via network.",
+  "main": "app.js",
+  "author": "Doc Bobo <boris@pruessmann.org> (https://blog.pruessmann.org/)",
+  "license": "Apache-2.0",
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
+  },
+  "dependencies": {
+    "debug": "^3.1.0",
+    "denon-client": "^0.2.4",
+    "fast-xml-parser": "^4.5.1",
+    "node-fetch": "^2.1.2",
+    "node-roon-api": "github:roonlabs/node-roon-api#51258392f8bfae3fe218740dda5bc049a822872e",
+    "node-roon-api-settings": "github:roonlabs/node-roon-api-settings#67cd8ca156c5bcd01ea63833ceaaec6d6a79654d",
+    "node-roon-api-source-control": "github:roonlabs/node-roon-api-source-control#fab2ba33f2c9249a8c9e69b6dcccfc8f333ab12e",
+    "node-roon-api-status": "github:roonlabs/node-roon-api-status#504c918d6da267e03fbb4337befa71ca3d3c7526",
+    "node-roon-api-volume-control": "github:roonlabs/node-roon-api-volume-control#56315d95344c9e0dc98c07c30a2de08727437b1e"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "@jest/globals": "^29.7.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "collectCoverageFrom": [
+      "*.js",
+      "!node_modules/**"
+    ],
+    "coverageDirectory": "coverage",
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ]
+  }
 }
